--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs = -Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 minecraft_version = 1.16.4
-yarn_mappings = 1.16.4+build.6
-loader_version = 0.10.6+build.214
+yarn_mappings = 1.16.4+build.7
+loader_version = 0.10.8
 
 # Mod Properties
 mod_name = textweaks
@@ -14,7 +14,7 @@ maven_group = com.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version = 0.25.1+build.416-1.16
+fabric_version = 0.27.1+1.16
 cloth_config_version = 4.8.2
 auto_config_version = 3.3.1
 mod_menu_version = 1.14.6+build.31
