--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
+org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version = 1.16.4
-yarn_mappings = 1.16.4+build.7
-loader_version = 0.10.8
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7
+loader_version=0.10.8
 
 # Mod Properties
-mod_name = textweaks
-mod_version = 1.1.0
-maven_group = com.ultimateboomer
+mod_name=textweaks
+mod_version=1.2.0
+maven_group=com.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version = 0.27.1+1.16
-cloth_config_version = 4.8.2
-auto_config_version = 3.3.1
-mod_menu_version = 1.14.6+build.31
+fabric_version=0.27.1+1.16
+cloth_config_version=4.8.2
+auto_config_version=3.3.1
+mod_menu_version=1.14.6+build.31
+smoothboot_version=1.16.4-1.3.2
