--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ minecraft {
 	accessWidener "src/main/resources/${project.mod_name}.accesswidener"
 }
 
+repositories {
+	maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -25,15 +29,17 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
-	modImplementation("me.shedaniel.cloth:config-2:${project.cloth_config_version}")
+	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 	include("me.shedaniel.cloth:config-2:${project.cloth_config_version}")
 	
-	modImplementation("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}")
+	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 	
-	modImplementation("io.github.prospector:modmenu:${project.mod_menu_version}")
+	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
 
-	modImplementation "io.github.ultimateboomer:smoothboot-fabric:${project.smoothboot_version}"
+	modRuntime "io.github.ultimateboomer:smoothboot-fabric:${project.smoothboot_version}"
+
+	modImplementation "com.github.Chocohead:OptiFabric:${project.optifabric_version}"
 }
 
 processResources {
