--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ cloth_config_version=4.8.2
 auto_config_version=3.3.1
 mod_menu_version=1.14.6+build.31
 smoothboot_version=1.16.4-1.3.2
+optifabric_version=llama-SNAPSHOT
