--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ maven_group=com.ultimateboomer
 fabric_version=0.27.1+1.16
 cloth_config_version=4.8.2
 auto_config_version=3.3.1
+niapi_version=1.16.5-1.0.0
 mod_menu_version=1.14.6+build.31
 smoothboot_version=1.16.4-1.4.0
 optifabric_version=llama-SNAPSHOT
