--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ minecraft {
 
 repositories {
 	maven { url 'https://jitpack.io' }
+	maven { url "https://maven.terraformersmc.com" }
 	mavenLocal()
 }
 
@@ -36,17 +37,12 @@ dependencies {
 	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 
-	modImplementation "io.github.ultimateboomer:niapi:${project.niapi_version}"
-	include "io.github.ultimateboomer:niapi:${project.niapi_version}"
+	modImplementation "com.github.UltimateBoomer:mc-niapi:${project.niapi_version}"
+	include "com.github.UltimateBoomer:mc-niapi:${project.niapi_version}"
 	
-	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
-	modRuntime "io.github.ultimateboomer:smoothboot-fabric:${project.smoothboot_version}"
-
-//	modImplementation "com.github.Chocohead:OptiFabric:${project.optifabric_version}"
-
-
-
+	modRuntime "com.github.UltimateBoomer:mc-smoothboot:${project.smoothboot_version}"
 }
 
 processResources {
