--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ minecraft {
 repositories {
 	maven { url 'https://jitpack.io' }
 	maven { url "https://maven.terraformersmc.com" }
+	maven { url "https://maven.shedaniel.me/" }
 	mavenLocal()
 }
 
@@ -31,18 +32,20 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
-	modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
-	include("me.shedaniel.cloth:config-2:${project.cloth_config_version}")
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+	include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}")
 	
-	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
-	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+//	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+//	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 
-	modImplementation "com.github.UltimateBoomer:mc-niapi:${project.niapi_version}"
-	include "com.github.UltimateBoomer:mc-niapi:${project.niapi_version}"
+	modImplementation "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
+	include "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
 	
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
-	modRuntime "com.github.UltimateBoomer:mc-smoothboot:${project.smoothboot_version}"
+	modRuntime "com.github.ultimateboomer:mc-smoothboot:${project.smoothboot_version}"
 }
 
 processResources {
