Update to 1.17, not all features working

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.5
+minecraft_version=1.17
+yarn_mappings=1.17+build.5
 loader_version=0.11.3
 
 # Mod Properties
@@ -14,10 +14,9 @@ maven_group=com.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.32.0+1.16
-cloth_config_version=4.11.15
-auto_config_version=3.3.1
+fabric_version=0.34.9+1.17
+cloth_config_version=5.0.34
 niapi_version=1.0.0
-mod_menu_version=1.16.8
+mod_menu_version=2.0.0-beta.7
 smoothboot_version=1.16.5-1.6.0
 optifabric_version=llama-SNAPSHOT
