--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.5
-loader_version=0.11.3
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.61
+loader_version=0.11.7
 
 # Mod Properties
 mod_name=textweaks
@@ -14,9 +14,9 @@ maven_group=com.ultimateboomer
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.34.9+1.17
-cloth_config_version=5.0.34
+fabric_version=0.40.1+1.17
+cloth_config_version=5.0.38
 niapi_version=1.0.0
-mod_menu_version=2.0.0-beta.7
+mod_menu_version=2.0.11
 smoothboot_version=1.16.5-1.6.0
 optifabric_version=llama-SNAPSHOT
