Update github tasks and gradle, remove niapi dependency

--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,8 @@ dependencies {
 //	modImplementation "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 //	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
 
-	modImplementation "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
-	include "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
+//	modImplementation "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
+//	include "com.github.ultimateboomer:mc-niapi:${project.niapi_version}"
 	
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
